--- a/client/src/index.css
+++ b/client/src/index.css
@@ -73,3 +73,16 @@ body {
   width: 400px;
   height: 400px;
 }
+
+.google-button{
+  background-color: "#ffffff";
+  border: "1px solid #dcdcdc";
+  border-radius: "5px";
+  padding: "10px 20px";
+  font-size: "16px";
+  cursor: "pointer";
+  display: "flex";
+  align-items: "center";
+
+}
+       
