--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   background-color: #F7F5EB;
 }
@@ -85,4 +89,5 @@ body {
   align-items: "center";
 
 }
+
        
